# convore-demo-python

./: .gitignore  README.md  pyproject.toml
convore-api-client/: README.md  pyproject.toml
convore-api-client/convore_api_client/: __init__.py
convore_api_client/: .gitlab-ci.yml  .travis.yml  README.md  pyproject.toml  setup.py  tox.ini
convore_api_client/.openapi-generator/: FILES
convore_api_client/convore_api_client/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
convore_api_client/docs/: AdminApi.md  ApiKey.md  Attachment.md  AttachmentsApi.md  AuthorizationFlow.md  AuthorizationFlowStatus.md  AuthorizationFlowsApi.md  Channel.md  ChannelAddress.md  ChannelStatus.md  ChannelsApi.md  ConnectApi.md  Connector.md  ConnectorsApi.md  Contact.md  ContactHandle.md  ContactHandleType.md  ContactsApi.md  Conversation.md  ConversationPriority.md  ConversationStatus.md  ConversationsApi.md  ConvoreMailChannel.md  CreateApiKeyRequest.md  CreateAuthorizationFlowRequest.md  CreateChannelRequest.md  CreateConnectorRequest.md  CreateContactRequest.md  CreateConversationRequest.md  CreateConvoreMailChannelParams.md  CreateDraftRequest.md  CreateGmailConnectorParams.md  CreateLabelRequest.md  (+51 more)
convore_sdk/: pyproject.toml
convore_sdk/convore_sdk/: client.py  subscriptions.py  utils.py
demo/: .env.example  README.md  pyproject.toml
demo/connected_gmail/: 1_create_a_connector.py  2_authorize.py  3_list_channels.py  4_list_conversations.py  5_retrieve_conversation_details.py  6_send_a_message.py  7_reply_a_message.py  8_list_contacts.py  modules.py
(+275 files in other folders)
